PostContingencyResult status fix (#405)
Parse aggregatedResults.xml and use it for post contingency results

Signed-off-by: lisrte <laurent.issertial@rte-france.com>