@@ -5,17 +5,21 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  * SPDX-License-Identifier: MPL-2.0
  */
-package com.powsybl.dynaflow;
+package com.powsybl.dynaflow.results;
 
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.contingency.Contingency;
+import com.powsybl.dynaflow.DynaflowReports;
 import com.powsybl.dynaflow.xml.ConstraintsReader;
 import com.powsybl.dynawo.commons.CommonReports;
 import com.powsybl.dynawo.commons.timeline.TimelineEntry;
 import com.powsybl.dynawo.commons.timeline.XmlTimeLineParser;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.loadflow.LoadFlowResult;
-import com.powsybl.security.*;
+import com.powsybl.security.LimitViolation;
+import com.powsybl.security.LimitViolationFilter;
+import com.powsybl.security.LimitViolationsResult;
+import com.powsybl.security.Security;
 import com.powsybl.security.results.NetworkResult;
 import com.powsybl.security.results.PostContingencyResult;
 import com.powsybl.security.results.PreContingencyResult;
@@ -23,8 +27,12 @@ import com.powsybl.security.results.PreContingencyResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+
+import static com.powsybl.dynaflow.SecurityAnalysisConstants.CONSTRAINTS_FOLDER;
+import static com.powsybl.dynawo.commons.DynawoConstants.AGGREGATED_RESULTS;
 
 /**
  * @author Laurent Issertial <laurent.issertial at rte-france.com>
@@ -48,22 +56,29 @@ public final class ContingencyResultsUtils {
      * Build the post-contingency results from the constraints files written by dynawo
      */
     public static List<PostContingencyResult> getPostContingencyResults(Network network, LimitViolationFilter violationFilter,
-                                                                  Path constraintsDir, List<Contingency> contingencies) {
+                                                                  Path workingDir, List<Contingency> contingencies) {
+        Path constraintsDir = workingDir.resolve(CONSTRAINTS_FOLDER);
+        Path results = workingDir.resolve(AGGREGATED_RESULTS);
+        Map<String, Status> scenarioResults = new HashMap<>();
+        if (Files.exists(results)) {
+            new XmlScenarioResultParser().parse(results, s -> scenarioResults.put(s.id(), s.status()));
+        }
         return contingencies.stream()
-                .map(c -> getPostContingencyResult(network, violationFilter, constraintsDir, c))
-                .collect(Collectors.toList());
+                .map(c -> new PostContingencyResult(c,
+                        ResultsUtil.convertStatus(scenarioResults.getOrDefault(c.getId(), Status.EXECUTION_PROBLEM)),
+                        getLimitViolationsResult(network, violationFilter, constraintsDir, c)))
+                .toList();
     }
 
-    private static PostContingencyResult getPostContingencyResult(Network network, LimitViolationFilter violationFilter,
-                                                                  Path constraintsDir, Contingency contingency) {
+    private static LimitViolationsResult getLimitViolationsResult(Network network, LimitViolationFilter violationFilter,
+                                            Path constraintsDir, Contingency contingency) {
         Path constraintsFile = constraintsDir.resolve("constraints_" + contingency.getId() + ".xml");
         if (Files.exists(constraintsFile)) {
             List<LimitViolation> limitViolationsRead = ConstraintsReader.read(network, constraintsFile);
             List<LimitViolation> limitViolationsFiltered = violationFilter.apply(limitViolationsRead, network);
-            return new PostContingencyResult(contingency, PostContingencyComputationStatus.CONVERGED, new LimitViolationsResult(limitViolationsFiltered));
-        } else {
-            return new PostContingencyResult(contingency, PostContingencyComputationStatus.FAILED, Collections.emptyList());
+            return new LimitViolationsResult(limitViolationsFiltered);
         }
+        return LimitViolationsResult.empty();
     }
 
     // Report the timeline events from the timeline files written by dynawo
